plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	/// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	// p6spy 디펜던시 (쿼리 파라미터 출력)
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
	//JWT
	implementation "io.jsonwebtoken:jjwt-api:0.11.5"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.5"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.5"

	// jsoup HTML parser library
	implementation 'org.jsoup:jsoup:1.17.2'
	// thymeleaf (temporary view)
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	// devtools (서버 재시작안하고 Ctrl+Shift+F9만 해도 변경된 코드 적용)
	implementation "org.springframework.boot:spring-boot-devtools"

	// 셀레니움
	implementation 'org.seleniumhq.selenium:selenium-java:4.19.1'
	implementation 'org.seleniumhq.selenium:selenium-chrome-driver:4.19.1'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	// to test with Logger
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

}

tasks.named('test') {
	useJUnitPlatform()
}
